# app/modules/users/dto/users.update-role.request.dto.go
@@ -1,0 +1,5 @@
+package dto
+
+type UpdateUserRoleRequest struct {
+	Role string `json:"role" binding:"required,oneof=admin user moderator"`
+}
